<resources>
    <string name="app_name">NavigationDeepLinkWidgetSample</string>
    <string name="sign_up_page">Sign Up</string>
    <string name="login_page">Login Page</string>
    <string name="title_forget_password">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_page">Settings Page</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name <font color='#FF0000'>*</font></string>
    <string name="email">Email <font color='#FF0000'>*</font></string>
    <string name="password">Password <font color='#FF0000'>*</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_long_label">Easy Sing Up</string>
    <string name="main_title">Welcome Deeplink Sample</string>
</resources>